# peach-mission-control

./: .gitignore  .pre-commit-config.yaml  OPERATING_PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  models.py
app/static/: style.css
app/templates/: approvals.html  index.html  kanban.html  login.html  weekly_report.html
docs/: ARCHITECTURE.md  UI_REVIEW_ROUND2.md
tests/: test_core_flows.py  test_smoke.py
